@@ -30,7 +30,12 @@ public class CarImpl implements Car
     @Override
     public void updateVelocity(TrafficLight l, RoadMap m)
     {
-        boolean stop = (m.nextNonCarSquareIsTrafficLight(position, direction, l) && ((direction.getXSpeed() !=0 ) == l.horizontalGreen()));        velocity.setXSpeed(stop ? 0 : direction.getXSpeed());
+        // this assumes that a car travelling in the x-direction may
+        // pass through a traffic light iff !light.horizontalGreen()
+        boolean stop = 
+            m.nextNonCarSquareIsTrafficLight(position, direction, l) && 
+            (direction.getXSpeed() !=0 ) == l.horizontalGreen();
+        velocity.setXSpeed(stop ? 0 : direction.getXSpeed());
         velocity.setYSpeed(stop ? 0 : direction.getYSpeed());
     }
 
